Little design fixes

--- a/OMemorizador/app/src/main/res/layout/activity_list_unit.xml
+++ b/OMemorizador/app/src/main/res/layout/activity_list_unit.xml
@@ -7,7 +7,11 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="16dp"
+            android:textSize="22dp"
+            android:layout_margin="5px"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:padding="3px"
             android:id="@+id/tvUnit">
     </TextView>
 
